--- a/contatti/contatti.html
+++ b/contatti/contatti.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Homepage EasyLib</title>  
+    <title>Contatti EasyLib</title>  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../general/logo-section.css">
     <link rel="stylesheet" href="styles/background.css">
     <link rel="stylesheet" href="../general/general.css">
-    <link rel="stylesheet" href="styles/book-section.css">
+    <link rel="stylesheet" href="../contatti/contatti.css">
   </head>
 
   <body>
@@ -54,7 +54,7 @@
         <script>
           // Seleziona il bottone di login
           var loginButton = document.getElementById("loginButton");
-  
+
           // Aggiungi un evento di click al bottone di login
           loginButton.addEventListener("click", function() {
               // Reindirizza l'utente alla pagina login.html
@@ -65,52 +65,25 @@
       <script src="../login/sign.js"></script>
 <!--fine header-->
 
-        <div class="background-container">
-            <div class="green-background">
-              <div class="didascalia">
-                Una libreria è una chiave inglese regolabile per aprire la testa
-              </div>
-            </div>
+        <div class="contatti-container">
+          <p class="info-sede">
+            Sede EasyLib: Via Sommarive, 9, 38123, Povo, Trento (TN)
+          </p>
+          <div class="google-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2319.676324156551!2d11.147678813137862!3d46.06800280435299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478276eabbc1a9f5%3A0xffcd60f164c3b0d!2sPolo%20Scientifico%20e%20Tecnologico%20Fabio%20Ferrari%2C%20Polo%20B%2C%20Via%20Sommarive%2C%209%2C%2038123%20Povo%20TN!5e0!3m2!1sen!2sit!4v1709050230301!5m2!1sen!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          </iframe>
+          <p class="info-contatti">
+            Contatti
+          </p>
+          <p>
+            E-mail: helpdesk@easylib.com
+          </p>
+          <p>
+            Telefono: 04613458761
+          </p>
         </div>
 
-        <div class="testo-noleggia">
-          Noleggia il tuo prossimo libro
-        </div>
 
-        <div class="book-section">
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-1.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-2.webp">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-3.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-4.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-5.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-6.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-7.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-8.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-9.jpeg">
-          </div>
-          <div class="books-container">
-            <img class="copertina-book" src="copertine-libri/copertina-10.jpeg">
-          </div>
-        </div class="archivio-button-container">
-        <button class="archivio-button">
-          Archivio
-        </button>
   </body>
 </html>
