modifiche formattazione pagina servizi

--- a/servizi/servizi.html
+++ b/servizi/servizi.html
@@ -66,40 +66,40 @@
 <!--fine header-->
 
         <div class="servizi-container">
-          <p class="titolo">
+          <h1 class="titolo">
             I nostri Servizi
-          </p>
+          </h1>
           <p>
             I servizi di EasyLib comprendono il noleggio di libri per un periodo variabile, solitamente i nostri clienti scelgono un mese,
             e la donazione di libri verso la nostra biblioteca.
           </p>
-          <p class="titolo-paragrafo">
+          <h1 class="titolo-paragrafo">
             Come Prenotare un libro
-          </p>
+          </h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <p class="titolo-paragrafo">
+          <h1 class="titolo-paragrafo">
             Per quanto tempo posso noleggiare un libro?
-          </p>
+          </h1>
           <p>
             Non tellus orci ac auctor augue mauris augue neque gravida. Augue lacus viverra vitae congue. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Risus quis varius quam quisque id diam vel. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Eget mauris pharetra et ultrices neque. Lorem donec massa sapien faucibus et. Sed libero enim sed faucibus. Dolor purus non enim praesent elementum facilisis. Nunc non blandit massa enim.
           </p>
-          <p class="titolo-paragrafo">
+          <h1 class="titolo-paragrafo">
             Nel caso non riconsegnassi il libro in tempo?
-          </p>
+          </h1>
           <p>
             Non tellus orci ac auctor augue mauris augue neque gravida. Augue lacus viverra vitae congue. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Risus quis varius quam quisque id diam vel. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Eget mauris pharetra et ultrices neque. Lorem donec massa sapien faucibus et. Sed libero enim sed faucibus. Dolor purus non enim praesent elementum facilisis. Nunc non blandit massa enim.
           </p>
-          <p class="titolo-paragrafo">
+          <h1 class="titolo-paragrafo">
             Come faccio a donare un libro?
-          </p>
+          </h1>
           <p>
             Non tellus orci ac auctor augue mauris augue neque gravida. Augue lacus viverra vitae congue. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Risus quis varius quam quisque id diam vel. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Eget mauris pharetra et ultrices neque. Lorem donec massa sapien faucibus et. Sed libero enim sed faucibus. Dolor purus non enim praesent elementum facilisis. Nunc non blandit massa enim.
           </p>
-          <p class="titolo-paragrafo">
+          <h1 class="titolo-paragrafo">
             Che vantaggi ci sono nel donare un libro?
-          </p>
+          </h1>
           <p>
             Non tellus orci ac auctor augue mauris augue neque gravida. Augue lacus viverra vitae congue. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Risus quis varius quam quisque id diam vel. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Eget mauris pharetra et ultrices neque. Lorem donec massa sapien faucibus et. Sed libero enim sed faucibus. Dolor purus non enim praesent elementum facilisis. Nunc non blandit massa enim.
           </p>
