aggiunto evento click su 'Prenota e Ritira'

--- a/archivio/archivio.html
+++ b/archivio/archivio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../general/logo-section.css">
     <link rel="stylesheet" href="styles/background.css">
     <link rel="stylesheet" href="../general/general.css">
-    <link rel="stylesheet" href="../archivio/book-section.css">
+    <link rel="stylesheet" href="../archivio/archivio.css">
   </head>
 
   <body>
@@ -75,11 +75,9 @@
             <div class="info-libro">
               <p class="autore">di <strong>Michiko Aoyama</strong></p>
               <p class="casa-editrice">Casa Editrice: Garzanti</p>
-               <button class="bottone-prenota">
+               <button class="bottone-prenota" id="prenotaButton0">
                 Prenota e ritira
               </button>
-            </div>
-            <div class="button">
             </div>
           </div>
         </div>
@@ -95,11 +93,9 @@
             <div class="info-libro">
               <p class="autore">di <strong>Georges Simenon</strong></p>
               <p class="casa-editrice">Casa Editrice: Adelphi</p>
-               <button class="bottone-prenota">
+               <button class="bottone-prenota" id="prenotaButton1">
                 Prenota e ritira
               </button>
-            </div>
-            <div class="button">
             </div>
           </div>
         </div>
@@ -115,11 +111,9 @@
             <div class="info-libro">
               <p class="autore">di <strong>Roxane Gay</strong></p>
               <p class="casa-editrice">Casa Editrice: Capitán Swing</p>
-               <button class="bottone-prenota">
+               <button class="bottone-prenota" id="prenotaButton2">
                 Prenota e ritira
               </button>
-            </div>
-            <div class="button">
             </div>
           </div>
         </div>
@@ -135,15 +129,24 @@
             <div class="info-libro">
               <p class="autore">di <strong>Sophie Mackintosh</strong></p>
               <p class="casa-editrice">Casa Editrice: Einaudi</p>
-               <button class="bottone-prenota">
+               <button class="bottone-prenota" id="prenotaButton3">
                 Prenota e ritira
               </button>
-            </div>
-            <div class="button"> 
             </div>
           </div>
         </div>
 
 
+        <script>
+          // Seleziona tutti i bottoni di prenotazione
+          var prenotaButtons = document.querySelectorAll(".bottone-prenota");
+          // Aggiungi un evento di click a ciascun bottone di prenotazione
+          prenotaButtons.forEach(function(button, index) {
+              button.addEventListener("click", function() {
+                  // Genera l'URL in base all'indice del pulsante e reindirizza l'utente
+                  window.location.href = "../appuntamento/appuntamento.html?id=" + (index + 1);
+              });
+          });
+      </script>
     </body>
 </html>
